task_kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slotegrator-test-svc
spec:
  selector:
    app: slotegrator-test
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
