task_kubernetes/manifests/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  labels:
    name: ingress-test
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: slotegrator-test-svc
            port: 
              number: 5000
